--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.3.3",
-    "mongoist": "^2.0.0"
+    "sequelize": "^5.21.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -16,7 +15,6 @@
   },
   "scripts": {
     "build": "babel index.js -d dist",
-    "start": "npm run build && node dist/index.js",
-    "db": "mongod --config /usr/local/etc/mongod.conf"
+    "start": "npm run build && node dist/index.js"
   }
 }
