--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mysql2": "^2.0.0",
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
@@ -14,7 +15,7 @@
     "@babel/preset-env": "^7.6.3"
   },
   "scripts": {
-    "build": "babel index.js -d dist",
+    "build": "babel *.js -d dist",
     "start": "npm run build && node dist/index.js"
   }
 }
