--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.0.0",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "sequelize-hierarchy": "^2.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
